unit test & clean