@@ -1,31 +1,30 @@
-/*******************************************************************************
+/*
  * Copyright (C) 2018 Cedric DEMONGIVERT <cedric.demongivert@gmail.com>
  *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * Permission is hereby granted,  free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
+ * in the Software without restriction,  including without limitation the rights
+ * to use,  copy, modify, merge,  publish,  distribute, sublicense,  and/or sell
+ * copies  of the  Software, and  to  permit persons  to  whom  the  Software is
  * furnished to do so, subject to the following conditions:
  *
- * The above copyright notice and this permission notice shall be included in
+ * The  above  copyright  notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
  *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
- ******************************************************************************/
+ * THE  SOFTWARE IS  PROVIDED  "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED,  INCLUDING  BUT  NOT LIMITED  TO THE  WARRANTIES  OF MERCHANTABILITY,
+ * FITNESS  FOR  A PARTICULAR  PURPOSE  AND  NONINFRINGEMENT. IN NO  EVENT SHALL
+ * THE  AUTHORS OR  COPYRIGHT  HOLDERS  BE  LIABLE FOR  ANY  CLAIM,  DAMAGES  OR
+ * OTHER  LIABILITY, WHETHER  IN  AN  ACTION  OF  CONTRACT,  TORT  OR  OTHERWISE,
+ * ARISING  FROM,  OUT  OF OR  IN  CONNECTION  WITH THE  SOFTWARE OR  THE USE OR
+ * OTHER DEALINGS IN THE SOFTWARE.
+ */
 package org.liara.collection.operator;
 
 import org.checkerframework.checker.index.qual.LTLengthOf;
 import org.checkerframework.checker.index.qual.NonNegative;
 import org.checkerframework.checker.nullness.qual.NonNull;
 import org.checkerframework.checker.nullness.qual.Nullable;
-import org.checkerframework.com.google.common.collect.Iterators;
 import org.liara.collection.Collection;
 
 import java.util.*;
@@ -55,14 +54,14 @@ public final class Composition implements Operator, Iterable<Operator>
 
       if (operator instanceof Composition) {
         for (@NonNull final Operator childOperator : (Composition) operator) {
-          result.addLast(operator);
+          result.addLast(childOperator);
         }
       } else {
         result.addLast(operator);
       }
     }
 
-    return result.toArray(new Operator[result.size()]);
+    return result.toArray(new Operator[0]);
   }
 
   /**
@@ -75,13 +74,9 @@ public final class Composition implements Operator, Iterable<Operator>
    *
    * @return A composition of the given operators.
    */
-  public static Operator of (@NonNull final Operator... operators)
+  public static @NonNull Operator of (@NonNull final Operator... operators)
   {
-    if (operators.length <= 0) {
-      return Composition.EMPTY;
-    } else {
-      return new Composition(operators);
-    }
+    return (operators.length > 0) ? new Composition(operators) : Composition.EMPTY;
   }
 
   @NonNull
@@ -194,14 +189,20 @@ public final class Composition implements Operator, Iterable<Operator>
    * @see Iterable#iterator()
    */
   public @NonNull Iterator<Operator> iterator () {
-    return Collections.unmodifiableList(Arrays.asList(_operators)).iterator();
+    return List.of(_operators).iterator();
   }
 
+  /**
+   * @see Object#hashCode()
+   */
   @Override
   public int hashCode () {
     return Arrays.deepHashCode(_operators);
   }
 
+  /**
+   * @see Object#equals(Object)
+   */
   @Override
   public boolean equals (@Nullable final Object other) {
     if (other == null) return false;
